[#10131] Migrate HBase1 API to HBase2 API