@@ -17,12 +17,14 @@
 package com.navercorp.pinpoint.hbase.schema.core;
 
 import com.navercorp.pinpoint.common.util.CollectionUtils;
-import org.apache.hadoop.hbase.HColumnDescriptor;
-import org.apache.hadoop.hbase.HTableDescriptor;
 import org.apache.hadoop.hbase.NamespaceDescriptor;
 import org.apache.hadoop.hbase.TableName;
+import org.apache.hadoop.hbase.client.ColumnFamilyDescriptorBuilder;
+import org.apache.hadoop.hbase.client.TableDescriptor;
+import org.apache.hadoop.hbase.client.TableDescriptorBuilder;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -34,109 +36,128 @@ import static org.assertj.core.api.Assertions.assertThat;
  */
 public class HtdHbaseSchemaVerifierTest {
 
-    private final HbaseSchemaVerifier<HTableDescriptor> verifier = new HtdHbaseSchemaVerifier();
+    private final HbaseSchemaVerifier<TableDescriptor> verifier = new HtdHbaseSchemaVerifier();
 
     @Test
     public void emptyExpectedSchemas_shouldReturnTrue() {
-        List<HTableDescriptor> emptyExpectedSchemas = Collections.emptyList();
-        List<HTableDescriptor> actualSchemas = List.of(createHtd("table1", "table1_1"));
+        List<TableDescriptor> emptyExpectedSchemas = Collections.emptyList();
+        List<TableDescriptor> actualSchemas = List.of(createHtd("table1", "table1_1"));
         assertThat(verifier.verifySchemas(null, actualSchemas)).isTrue();
         assertThat(verifier.verifySchemas(emptyExpectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void emptyActualSchemas_shouldReturnFalse() {
-        List<HTableDescriptor> emptyActualSchemas = Collections.emptyList();
-        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "table1_1"));
+        List<TableDescriptor> emptyActualSchemas = Collections.emptyList();
+        List<TableDescriptor> expectedSchemas = List.of(createHtd("table1", "table1_1"));
         assertThat(verifier.verifySchemas(expectedSchemas, null)).isFalse();
         assertThat(verifier.verifySchemas(expectedSchemas, emptyActualSchemas)).isFalse();
     }
 
     @Test
     public void exactMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = List.of(
+        List<TableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
-        List<HTableDescriptor> actualSchemas = copySchema(expectedSchemas);
+        List<TableDescriptor> actualSchemas = copySchema(expectedSchemas);
         assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void excessiveTableNameMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = List.of(
+        List<TableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
-        List<HTableDescriptor> actualSchemas = copySchema(expectedSchemas);
+        List<TableDescriptor> actualSchemas = copySchema(expectedSchemas);
         actualSchemas.add(createHtd("table4", "table4_1"));
         assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
     }
 
     @Test
     public void excessiveColumnFamilyMatch_shouldReturnTrue() {
-        List<HTableDescriptor> expectedSchemas = List.of(
+        List<TableDescriptor> expectedSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
-        List<HTableDescriptor> actualSchemas = copySchema(expectedSchemas);
-        for (HTableDescriptor htd : actualSchemas) {
-            htd.addFamily(new HColumnDescriptor("newCF"));
+        List<TableDescriptorBuilder> actualSchemas = copyToBuilder(expectedSchemas);
+        for (TableDescriptorBuilder htd : actualSchemas) {
+            htd.setColumnFamily(ColumnFamilyDescriptorBuilder.of("newCF"));
         }
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isTrue();
+        assertThat(verifier.verifySchemas(expectedSchemas, build(actualSchemas))).isTrue();
     }
 
     @Test
     public void partialTableNameMatch_shouldReturnFalse() {
-        List<HTableDescriptor> actualSchemas = List.of(
+        List<TableDescriptor> actualSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
-        List<HTableDescriptor> expectedSchemas = copySchema(actualSchemas);
-        expectedSchemas.add(createHtd("table4", "table4_1"));
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
+        List<TableDescriptorBuilder> expectedSchemas = copyToBuilder(actualSchemas);
+        expectedSchemas.add(TableDescriptorBuilder.newBuilder(createHtd("table4", "table4_1")));
+        assertThat(verifier.verifySchemas(build(expectedSchemas), actualSchemas)).isFalse();
     }
 
     @Test
     public void partialColumnFamilyMatch_shouldReturnFalse() {
-        List<HTableDescriptor> actualSchemas = List.of(
+        List<TableDescriptor> actualSchemas = List.of(
                 createHtd("table1", "table1_1"),
                 createHtd("table2", "table2_1", "table2_2", "table2_3"),
                 createHtd("table3"));
-        List<HTableDescriptor> expectedSchemas = copySchema(actualSchemas);
-        for (HTableDescriptor htd : expectedSchemas) {
-            htd.addFamily(new HColumnDescriptor("newCF"));
+        List<TableDescriptorBuilder> expectedSchemas = copyToBuilder(actualSchemas);
+        for (TableDescriptorBuilder htd : expectedSchemas) {
+            htd.setColumnFamily(ColumnFamilyDescriptorBuilder.of("newCF"));
         }
-        assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
+        assertThat(verifier.verifySchemas(build(expectedSchemas), actualSchemas)).isFalse();
     }
 
     @Test
     public void tableNameMismatch_shouldReturnFalse() {
-        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
-        List<HTableDescriptor> actualSchemas = List.of(createHtd("table2", "CF1"));
+        List<TableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
+        List<TableDescriptor> actualSchemas = List.of(createHtd("table2", "CF1"));
         assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
     @Test
     public void columnFamilyMismatch_shouldReturnFalse() {
-        List<HTableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
-        List<HTableDescriptor> actualSchemas = List.of(createHtd("table1", "CF2"));
+        List<TableDescriptor> expectedSchemas = List.of(createHtd("table1", "CF1"));
+        List<TableDescriptor> actualSchemas = List.of(createHtd("table1", "CF2"));
         assertThat(verifier.verifySchemas(expectedSchemas, actualSchemas)).isFalse();
     }
 
-    private HTableDescriptor createHtd(String tableQualifier, String... columnFamilyNames) {
+    private TableDescriptor createHtd(String tableQualifier, String... columnFamilyNames) {
         TableName tableName = TableName.valueOf(NamespaceDescriptor.DEFAULT_NAMESPACE_NAME_STR, tableQualifier);
-        HTableDescriptor htd = new HTableDescriptor(tableName);
+
+        TableDescriptorBuilder builder = TableDescriptorBuilder.newBuilder(tableName);
         for (String columnFamilyName : columnFamilyNames) {
-            htd.addFamily(new HColumnDescriptor(columnFamilyName));
+            builder.setColumnFamily(ColumnFamilyDescriptorBuilder.of(columnFamilyName));
         }
-        return htd;
+        return builder.build();
     }
 
-    private List<HTableDescriptor> copySchema(List<HTableDescriptor> htds) {
+    private List<TableDescriptor> copySchema(List<TableDescriptor> htds) {
         if (CollectionUtils.isEmpty(htds)) {
             return Collections.emptyList();
         }
-        return htds.stream().map(HTableDescriptor::new).collect(Collectors.toList());
+        return new ArrayList<>(htds);
+    }
+
+    private List<TableDescriptorBuilder> copyToBuilder(List<TableDescriptor> htds) {
+        if (CollectionUtils.isEmpty(htds)) {
+            return Collections.emptyList();
+        }
+        return htds.stream()
+                .map(TableDescriptorBuilder::newBuilder)
+                .collect(Collectors.toList());
+    }
+
+    private List<TableDescriptor> build(List<TableDescriptorBuilder> htds) {
+        if (CollectionUtils.isEmpty(htds)) {
+            return Collections.emptyList();
+        }
+        return htds.stream()
+                .map(TableDescriptorBuilder::build)
+                .collect(Collectors.toList());
     }
 }
